--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   
 </head>
 <body>
-  <header>
+  <header class="header">
     <nav>
       <img src="./images/logo.svg" alt="logo">
       <ul class="list">
@@ -22,6 +22,7 @@
       <img src="./images/icon-hamburger.svg" alt="icon-hamburger" class="menu">
       <img src="./images/icon-close.svg" alt="icon-close" class="close">
     </nav>
+
     <div class="experience">
       <p>Immersive experiences that deliver</p>
     </div>
@@ -41,7 +42,7 @@
 
     <div class="top">
       <h1>Our creations</h1>
-      <button>See  all</button>
+      <button class="btn">See  all</button>
     </div>
 
     <div class="images">
@@ -87,7 +88,7 @@
     </ul>
     <p>© 2021 Loopstudios. All rights reserved.</p>
   </div>
-  
+
   </footer>
 <script src="./app.js"></script>
  </body>
